@@ -1,16 +1,16 @@
 buildscript {
     dependencies {
-        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.11'
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.9.4'
     }
 }
 
 plugins {
-    id "com.github.hierynomus.license" version "0.15.0"
+    id "com.github.hierynomus.license" version "0.16.1"
     id 'com.github.sherter.google-java-format' version '0.9'
-    id 'net.ltgt.errorprone' version  '1.1.1'
+    id 'net.ltgt.errorprone' version  '3.1.0'
     id 'java-library'
     id 'jacoco'
-    id 'com.google.protobuf' version '0.8.11'
+    id 'com.google.protobuf' version '0.9.4'
     id("io.github.gradle-nexus.publish-plugin") version "1.3.0"  // Nexus publishing
 }
 
@@ -32,7 +32,6 @@ repositories {
 
 apply plugin: 'com.google.protobuf'
 apply plugin: 'idea' // IntelliJ plugin to see files generated from protos
-apply plugin: 'maven'
 apply plugin: 'maven-publish'
 apply plugin: 'com.github.sherter.google-java-format'
 
@@ -65,28 +64,27 @@ def getVersion() {
 description = '''Uber Cadence Java Client'''
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
 
 dependencies {
-    errorproneJavac('com.google.errorprone:javac:9+181-r4173-1')
-    errorprone('com.google.errorprone:error_prone_core:2.3.4')
+    errorprone('com.google.errorprone:error_prone_core:2.23.0')
 
-    compile group: 'io.opentracing', name: 'opentracing-api', version: '0.33.0'
-    compile group: 'io.opentracing', name: 'opentracing-util', version: '0.33.0'
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.36'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.10'
-    compile group: 'com.uber.m3', name: 'tally-core', version: '0.11.1'
-    compile group: 'com.google.guava', name: 'guava', version: '31.1-jre'
-    compile group: 'com.cronutils', name: 'cron-utils', version: '9.2.0'
-    compile group: 'io.micrometer', name: 'micrometer-core', version: '1.10.2'
-    compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
-    compile group: 'com.auth0', name: 'java-jwt', version:'3.10.2'
-    compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.21.9'
-    compile group: 'com.google.api.grpc', name: 'proto-google-common-protos', version: '2.10.0'
-    compile group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.21.9'
-    compile group: 'com.google.oauth-client', name: 'google-oauth-client', version: '1.35.0'
+    api group: 'io.opentracing', name: 'opentracing-api', version: '0.33.0'
+    api group: 'io.opentracing', name: 'opentracing-util', version: '0.33.0'
+    api group: 'org.slf4j', name: 'slf4j-api', version: '1.7.36'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10'
+    implementation group: 'com.uber.m3', name: 'tally-core', version: '0.11.1'
+    implementation group: 'com.google.guava', name: 'guava', version: '31.1-jre'
+    implementation group: 'com.cronutils', name: 'cron-utils', version: '9.2.0'
+    implementation group: 'io.micrometer', name: 'micrometer-core', version: '1.10.2'
+    implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+    implementation group: 'com.auth0', name: 'java-jwt', version:'3.10.2'
+    implementation group: 'com.google.protobuf', name: 'protobuf-java', version: '3.21.9'
+    implementation group: 'com.google.api.grpc', name: 'proto-google-common-protos', version: '2.10.0'
+    implementation group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.21.9'
+    implementation group: 'com.google.oauth-client', name: 'google-oauth-client', version: '1.35.0'
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
     testCompileOnly 'org.projectlombok:lombok:1.18.30'
@@ -96,12 +94,12 @@ dependencies {
     implementation 'io.grpc:grpc-protobuf:1.54.2'
     implementation 'io.grpc:grpc-stub:1.54.2'
 
-    compile("io.opentelemetry:opentelemetry-api:1.19.0")
+    implementation("io.opentelemetry:opentelemetry-api:1.19.0")
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'com.googlecode.junit-toolbox', name: 'junit-toolbox', version: '2.4'
-    testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
-    testCompile group: 'io.grpc', name: 'grpc-testing', version: '1.54.2'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'com.googlecode.junit-toolbox', name: 'junit-toolbox', version: '2.4'
+    testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    testImplementation group: 'io.grpc', name: 'grpc-testing', version: '1.54.2'
     testImplementation 'io.opentracing:opentracing-mock:0.33.0'
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.5.1'
     testImplementation "org.mockito:mockito-inline:4.5.1" // for mocking final classes
@@ -192,6 +190,7 @@ compileJava {
         disable('JavaTimeDefaultTimeZone')
         disable('MutableConstantField')
         disable('CatchFail')
+        disable('DoNotCall')
     }
 }
 
@@ -205,6 +204,7 @@ compileTestJava {
         disable('JavaTimeDefaultTimeZone')
         disable('MutableConstantField')
         disable('CatchFail')
+        disable('DoNotCall')
     }
 }
 
@@ -340,6 +340,15 @@ task registerDomain(type:JavaExec) {
     classpath = sourceSets.test.runtimeClasspath
 }
 
+tasks.withType(Test) {
+    jvmArgs += [
+        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+    ]
+}
+
 test {
     dependsOn 'registerDomain'
     dependsOn 'licenseMain'
@@ -359,8 +368,8 @@ jacoco {
 jacocoTestReport {
     dependsOn test
     reports {
-        xml.enabled = true
-        html.enabled = true
+        xml.required = true
+        html.required = true
     }
 
     afterEvaluate {
